# sheet-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/sheets_mcp/: __init__.py  server.py
