# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sheets_mcp"
version = "0.1.0"
description = "Google Sheets MCP Server for interacting with spreadsheets through Claude"
authors = [
  {name = "Your Name", email = "your.email@example.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=0.6.0",
    "gspread>=5.10.0",
    "oauth2client>=4.1.3",
    "python-dotenv>=1.0.0",
]

[project.scripts]
sheet-mcp = "sheets_mcp.server:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/sheets-mcp"
"Bug Tracker" = "https://github.com/yourusername/sheets-mcp/issues"